# log-analysis

./: .gitignore  pyproject.toml
src/deepspan/: separate.py  train.py
src/deepspan/core/: database.py  deepspan.py  hmm.py  prefixspan.py  trie.py
src/experiments/deepspan_deinterleave/: prefixspan_cyclic.py  prefixspan_openssh.py
src/experiments/deepspan_deinterleave/datasets/: batches.py  real.py
src/experiments/log_analysis/deepspan_deinterleave/: deepspan_cyclic.py  deepspan_random.py  prefixspan_apache.py  prefixspan_cyclic.py  prefixspan_random.py
src/experiments/log_analysis/deepspan_deinterleave/datasets/: __init__.py  dataset.py  real.py  synthetic.py
src/experiments/log_analysis/deepspan_deinterleave/datasets/apache/: projects.py
src/experiments/log_analysis/deepspan_deinterleave/datasets/test_logs/: projects.py
src/experiments/log_analysis/deepspan_deinterleave/metrics/: grouping.py
src/experiments/log_analysis/workloadgen/datasets/: csv.py  dataset.py  synthetic.py
src/experiments/log_analysis/workloadgen/report/: .gitignore
src/experiments/report/: paperpile.bib
src/experiments/workloadgen/report/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  preamble.fdb_latexmk  preamble.fls
