[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deepspan"
dynamic = ["version"]
description = "Sequential pattern mining library that implements `deepspan`."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "bolu", email = "bolu@bolupi.me" },
]
dependencies = [
  "prefixspan @ git+https://github.com/bolu61/prefixspan@v0.1.7-alpha",
  "jax",
  "jaxtyping",
  "flax",
  "optax",
  "scipy",
  "cliffs-delta",
  "tqdm",
]

[project.urls]
Documentation = "https://github.com/unknown/worklog#readme"
Issues = "https://github.com/unknown/worklog/issues"
Source = "https://github.com/unknown/worklog"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
packages = ["src/deepspan", "src/experiments/log_analysis/deepspan_deinterleave"]

[tool.hatch.envs.default]
dependencies = [
	"tqdm",
	"pygit2",
	"pandas",
	"logparse @ git+https://github.com/senseuwaterloo/logparse@main",
	"python-dateutil"
]

[tool.hatch.metadata]
allow-direct-references = true
